frontend/src/style.css
@import url('https://fonts.googleapis.com/css2?family=Prompt&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@import "tailwindcss";
@plugin "daisyui" {
    themes: light --default
}
@plugin "@tailwindcss/typography";

@theme {
    --color-title: #0a3b1f;
    --color-lighter: #44b15b;
}

body {
    font-family: 'Prompt', sans-serif;
    font-size: 16px;  /* default */
}

.input-box {
    @apply input input-lg rounded-2xl placeholder-black
}

.in-line-stat {
    @apply flex flex-row text-xs items-center
}

.in-line-icon {
    @apply mr-4 w-5
}

.requirements-icon {
    @apply mr-4 w-7
}

.requirements-div {
    @apply flex flex-row items-center
}

.box-shadow {
    box-shadow: 0 4px 4px rgba(0,0,0,0.3);
}

.sidebar-properties {
    @apply flex items-center h-35
}

.sidebar-highlight {
    @apply bg-[#e3ffea] border-l-8 border-[#21803a]
}

.sidebar-normal {
    @apply hover:bg-[#D9D9D9]
}

